<?xml version="1.0"?>
<package format="2">
  <name>aruco_det</name>
  <version>0.0.0</version>
  <description>The aruco_det package</description>

  <maintainer email="ckt@todo.todo">ckt</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>image_transport</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  
  <export>
    <msg from="aruco_det" file="msg/order_to_pwm_marker.msg"/>
    <cpp cflags="-std=c++11"/>
  </export>
</package>