<?xml version="1.0" encoding="UTF-8"?>
<package format="2">x 
  <name>bbox_det</name>
  <version>0.0.0</version>
  <description>The bbox_det package</description>

  <maintainer email="ckt@todo.todo">ckt</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>vision_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>

  <export>
    <cpp cflags="-std=c++11"/>
  </export>
</package>